test/simple/typeerrors/Examples/Guardedexpression.hs
module Guardedexpression where

f x | True  = 42
    | False = "aap"
